# peatland-dashboard

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
peatland_dashboard/: download.py  upload.py  util.py
peatland_dashboard/data/: default.csv
