[tool.poetry]
name = "peatland-dashboard"
version = "0.1.0"
description = ""
authors = ["Gabriel Couture <gacou54@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
peatland-time-series = "^0.1.4"
streamlit = "^1.5.0"
plotly = "^5.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

